--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,3 @@
 ---
 galaxy_info:
-  description: Prometheus node_exporter role
+  description: Java role, install java versions and set systems default
