--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -3,7 +3,10 @@
   hosts: all
   gather_facts: no
   pre_tasks:
-    - raw: sudo apt-get -y install python-simplejson
+    - name: Install python2 on Ubuntu
+      raw: sudo apt-get -y install python-simplejson
+      changed_when: false
+      tags: skip_ansible_lint
 
 - hosts: all
   roles:
