#2 Enable openjdk installation

--- a/molecule.yml
+++ b/molecule.yml
@@ -28,6 +28,10 @@ ansible:
 # configuration options for the internal call to vagrant
 vagrant:
   # molecule's --platform option will look for these names
+  raw_config_args:
+    - "landrush.enabled = true"
+    - "landrush.tld = 'vm'"
+    - "landrush.guest_redirect_dns = false"
   platforms:
     - name: Debian
       box: debian/jessie64
@@ -43,9 +47,16 @@ vagrant:
         cpus: 1
 
   instances:
-    - name: vagrant
+    - name: oracle
       ansible_groups:
-        - group01
+        - oracle
+      interfaces:
+        - network_name: private_network
+          type: dhcp
+          auto_config: true
+    - name: openjdk
+      ansible_groups:
+        - openjdk
       interfaces:
         - network_name: private_network
           type: dhcp
