--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,50 +1,13 @@
 ---
-- name: Debian repo
-  apt_key:
-    keyserver: hkp://keyserver.ubuntu.com:80
-    id: EEA14886
-  when: ansible_distribution in [ 'Debian' ]
 
-- name: Debian repo key
-  apt_repository:
-    repo: "{{ java_repo }}"
-  when: ansible_distribution in [ 'Debian' ]
+- name: JAVA | Install Oracle Implementation
+  include: install_oracle.yml
+  when: java_implementation == 'oracle'
+  tags:
+    - install
 
-- name: Add Java ppa to Ubuntu
-  apt_repository:
-    repo: ppa:{{ java_ppa }}
-  when: ansible_distribution in [ 'Ubuntu' ]
-
-- name: Autoaccept license for Java
-  debconf:
-    name: oracle-java{{ item }}-installer
-    question: shared/accepted-oracle-license-v1-1
-    value: 'true'
-    vtype: select
-  with_items: "{{ java_version }}"
-
-- name: Install Java
-  apt:
-    pkg: oracle-java{{ item }}-installer
-    state: latest
-    install_recommends: yes
-    update_cache: yes
-    cache_valid_time: 3600
-  with_items: "{{ java_version }}"
-  tags: skip_ansible_lint
-
-- name: Set Java Env
-  apt:
-    pkg: oracle-java{{ java_set_version }}-set-default
-    state: latest
-    install_recommends: yes
-    update_cache: yes
-    cache_valid_time: 3600
-  tags: skip_ansible_lint
-
-- name: Ensure Defaults on etc/alternatives systems
-  file:
-    src: /usr/lib/jvm/java-{{ java_set_version }}-oracle
-    dest: /usr/lib/jvm/default-java
-    force: yes
-    state: link
+- name: JAVA | Install OpenJDK Implementation
+  include: install_openjdk.yml
+  when: java_implementation == 'openjdk'
+  tags:
+    - install
