--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,3 +3,8 @@ galaxy_info:
   company: Idealista S.A.
   description: Java role, install java versions and set systems default
   min_ansible_version: 2.0
+  license: Apache 2.0
+  platforms:
+    - name: Debian
+      versions:
+        - jessie
