--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 
-- name: JAVA | Install Oracle Implementation
-  include: install_oracle.yml
-  when: java_implementation == 'oracle'
+- name: Java | Install OpenJDK Implementation
+  include: install_openjdk.yml
+  when: java_implementation == 'openjdk'
   tags:
     - install
 
-- name: JAVA | Install OpenJDK Implementation
-  include: install_openjdk.yml
-  when: java_implementation == 'openjdk'
+- name: Java | Install OracleJDK Implementation using distributed binaries
+  include: install_oraclejdk.yml
+  when: java_implementation == 'oraclejdk'
   tags:
     - install
