--- a/tasks/install_oraclejdk.yml
+++ b/tasks/install_oraclejdk.yml
@@ -4,6 +4,12 @@
   set_fact:
     java_home: "{{ java_oracle_jdk_install_path }}"
 
+- name: Java | Check Java version
+  command: java -version
+  register: java_check_version
+  changed_when: false
+  ignore_errors: true
+
 - name: Java | Download .tar.gz file containing binaries from Oracle website
   get_url:
     url: "{{ java_oracle_jdk_latest_versions_urls[java_oracle_jdk_version].url }}"
@@ -11,6 +17,7 @@
     # That implies that you accept the Oracle Binary Code License Agreement for Java SE (http://www.oracle.com/technetwork/java/javase/terms/license/index.html)
     headers: "Cookie:oraclelicense=accept-securebackup-cookie"
     sha256sum: "{{ java_oracle_jdk_latest_versions_urls[java_oracle_jdk_version].sha256 }}"
+  when: 'java_check_version|failed or "{{ java_oracle_jdk_version }}" not in java_check_version.stderr'
   register: download_java_binaries
 
 - name: Java | Ensure installation dir exists
