--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  company: Idealista S.A.
+  company: Idealista S.A.U.
   description: Java role, install java versions and set systems default
   min_ansible_version: 2.2.1.0
   license: Apache 2.0
