--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
   - docker
 install:
   - pip install ansible==2.4.3.0
+  - pip install testinfra==1.7.1
   - pip install molecule==1.25.0
   - pip install ansible-lint==3.4.20
   - pip install docker
