--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,12 @@ services:
   - docker
 install:
   - pip install ansible==2.4.3.0
-  - pip install testinfra==1.7.1
   - pip install molecule==1.25.0
   - pip install ansible-lint==3.4.20
+  - pip install testinfra==1.10.1
+  - pip install pytest==3.3.1
+  - pip install py==1.5.2
+  - pip install pluggy==0.6.0
   - pip install docker
 script:
   - molecule test --driver docker
