--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@
 java_implementation: openjdk # [openjdk, oraclejdk]
 
 # OracleJDK implementation (only support for x64 architectures)
-java_oracle_jdk_version: 1.8.0_181 # [1.8.0_181, 10.0.2] (see available urls in ../vars/main.yml)
+java_oracle_jdk_version: 1.8.0_191 # [1.8.0_191, 1.8.0_192, 11.0.1] (see available urls in ../vars/main.yml)
 java_oracle_jdk_install_path: /opt/jdk/{{ java_oracle_jdk_version }}
 
 # OpenJDK implementation
