--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,11 @@ sudo: required
 services:
   - docker
 install:
-  - pip install ansible==2.4.3.0
-  - pip install molecule==1.25.0
-  - pip install ansible-lint==3.4.20
-  - pip install testinfra==1.10.1
-  - pip install pytest==3.3.1
-  - pip install py==1.5.2
-  - pip install pluggy==0.6.0
-  - pip install docker
+  - pip install pipenv
+  - pipenv install -r test-requirements.txt --python 2.7
 script:
-  - molecule test --driver docker
+  - pipenv run molecule test
+  - pipenv run molecule test -s oracle_jdk
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
