#37 fixing C&P in openJDK test :(

--- a/molecule/default/tests/test_default.yml
+++ b/molecule/default/tests/test_default.yml
@@ -19,6 +19,6 @@ package:
 command:
   java -version:
     exit-status: 0
-    stdout:
-    - go version go1.6 linux/amd64
-    stderr: []
+    stdout: []
+    stderr:
+      - {{ java_oracle_jdk_version }}
