#41 removing unused required libs and adding mantainer to Dockerfiles

--- a/dockerhub/Debian8/Dockerfile
+++ b/dockerhub/Debian8/Dockerfile
@@ -2,3 +2,5 @@ FROM geerlingguy/docker-debian8-ansible
 RUN ansible-galaxy install idealista.java-role
 COPY playbook.yml /home/playbook.yml
 RUN ansible-playbook /home/playbook.yml
+
+LABEL maintainer="idealista <labs@idealista.com>"
