#41 #42 Fixing OpenJDK installation under Debian Jessie and avoid to install unrequired libs/repositories under Debian Stretch

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,10 +9,21 @@ lint:
     config-file: .yamllint
 
 platforms:
-  - name: openjdk
+  - name: openjdk-debian9
     groups:
       - openjdk
     image: geerlingguy/docker-debian9-ansible:latest
+    privileged: true
+    capabilities:
+      - SYS_ADMIN
+    volumes:
+      - '/sys/fs/cgroup:/sys/fs/cgroup:ro'
+    command: '/lib/systemd/systemd'
+
+  - name: openjdk-debian8
+    groups:
+      - openjdk
+    image: geerlingguy/docker-debian8-ansible:latest
     privileged: true
     capabilities:
       - SYS_ADMIN
