--- a/molecule/oracle_jdk/molecule.yml
+++ b/molecule/oracle_jdk/molecule.yml
@@ -9,10 +9,21 @@ lint:
     config-file: .yamllint
 
 platforms:
-  - name: oraclejdk
+  - name: oraclejdk-debian9
     groups:
       - oraclejdk
     image: geerlingguy/docker-debian9-ansible:latest
+    privileged: true
+    capabilities:
+      - SYS_ADMIN
+    volumes:
+      - '/sys/fs/cgroup:/sys/fs/cgroup:ro'
+    command: '/lib/systemd/systemd'
+
+  - name: oraclejdk-debian8
+    groups:
+      - oraclejdk
+    image: geerlingguy/docker-debian8-ansible:latest
     privileged: true
     capabilities:
       - SYS_ADMIN
