--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -1,30 +1,34 @@
 ---
 
+- name: Java | Gather OS specific variables
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml"
+  tags: vars
+
 - name: Java | Set JAVA_HOME fact
   set_fact:
     java_home: "{{ java_open_jdk_home }}"
 
-- name: Java | Check Debian Release
-  set_fact:
-    debian_release: >-
-        {{ (ansible_distribution in [ 'Debian' ] and
-        ansible_distribution_major_version == '8') |
-        ternary('jessie-backports','stretch') }}
+# Adding backports as is described here: https://backports.debian.org/Instructions/
+- name: Java | Add Jessie backports repository in Debian Jessie
+  apt_repository:
+    repo: "{{ item }}"
+    state: present
+  with_items: "{{ java_required_repositories_openjdk }}"
+
+- name: Java | Install required libs
+  apt:
+    name: "{{ item }}"
+    state: present
+    update_cache: true
+  with_items: "{{ java_required_libs_openjdk }}"
 
 - name: Java | Install Java
   apt:
     name: "openjdk-{{ java_open_jdk_version }}-jdk"
     state: present
     update_cache: true
-    default_release: "{{ debian_release }}"
-  when: ansible_distribution in [ 'Debian' ]
-
-- name: Java | Install Java
-  apt:
-    name: "openjdk-{{ java_open_jdk_version }}-jdk"
-    state: present
-    update_cache: true
-  when: ansible_distribution in [ 'Ubuntu' ]
 
 - name: Java | Update Env
   alternatives:
