--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 
-- name: Java | Install OpenJDK Implementation
+- name: Java | Install OpenJDK implementation
   import_tasks: install_openjdk.yml
   when: java_implementation == 'openjdk'
   tags:
     - install
 
-- name: Java | Install OracleJDK Implementation using distributed binaries
+- name: Java | Install OracleJDK implementation using distributed binaries
   import_tasks: install_oraclejdk.yml
   when: java_implementation == 'oraclejdk'
   tags:
