--- a/molecule/debian8-oraclejdk/verifier.yml
+++ b/molecule/debian8-oraclejdk/verifier.yml
@@ -22,7 +22,7 @@
   vars_files:
     - ../../defaults/main.yml
     - ../../vars/main.yml
-    - ./group_vars/oraclejdk.yml
+    - ../resources/oraclejdk/group_vars/oraclejdk.yml
 
   tasks:
     - name: Download and install goss
@@ -36,7 +36,7 @@
         src: "{{ item }}"
         dest: "{{ goss_test_directory }}/{{ item | basename }}"
       with_fileglob:
-        - "{{ playbook_dir }}/tests/test_*.yml"
+        - "{{ playbook_dir }}/../resources/oraclejdk/tests/test_*.yml"
 
     - name: Register test files
       shell: "ls {{ goss_test_directory }}/test_*.yml"
