--- a/molecule/resources/oraclejdk/create.yml
+++ b/molecule/resources/oraclejdk/create.yml
@@ -12,7 +12,7 @@
   tasks:
     - name: Create Dockerfiles from image names
       template:
-        src: "{{ molecule_scenario_directory }}/Dockerfile.j2"
+        src: Dockerfile.j2
         dest: "{{ molecule_ephemeral_directory }}/Dockerfile_{{ item.image | regex_replace('[^a-zA-Z0-9_]', '_') }}"
       with_items: "{{ molecule_yml.platforms }}"
       register: platforms
