--- a/molecule/openjdk/molecule.yml
+++ b/molecule/openjdk/molecule.yml
@@ -9,10 +9,10 @@ lint:
     config-file: .yamllint
 
 platforms:
-  - name: openjdk-debian9
+  - name: openjdk-${MOLECULE_DISTRO:-debian9}
     groups:
       - openjdk
-    image: geerlingguy/docker-debian9-ansible:latest
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-debian9}-ansible:latest
     privileged: true
     capabilities:
       - SYS_ADMIN
@@ -24,15 +24,9 @@ provisioner:
   name: ansible
   lint:
     name: ansible-lint
-  playbooks:
-    create: ../resources/openjdk/create.yml
-    prepare: ../resources/openjdk/prepare.yml
-    destroy: ../resources/openjdk/destroy.yml
-    converge: ../resources/openjdk/playbook.yml
 scenario:
-  name: debian9-openjdk
+  name: openjdk
 verifier:
   name: goss
   lint:
     name: flake8
-  directory: ../resources/openjdk/
