--- a/molecule/openjdk/verifier.yml
+++ b/molecule/openjdk/verifier.yml
@@ -23,6 +23,7 @@
     - ../../defaults/main.yml
     - ../../vars/main.yml
     - ./group_vars/openjdk.yml
+    - ../../vars/{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml
 
   tasks:
     - name: Download and install goss
