--- a/vars/Debian-jessie.yml
+++ b/vars/Debian-jessie.yml
@@ -8,3 +8,5 @@ java_required_libs_openjdk:
   - ca-certificates-java=20161107~bpo8+1
   - openjdk-8-jre-headless
   - libcups2
+
+java_open_jdk_version: 8u171-b11-1~bpo8+1
