--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,7 @@
 ---
 galaxy_info:
+  role_name: java-role
+  author: idealista
   company: Idealista S.A.U.
   description: Java role, install java versions and set systems default
   min_ansible_version: 2.4.5.0
@@ -13,3 +15,4 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - xenial
+        - bionic
