--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     - MOLECULE_DISTRO: debian8
     - MOLECULE_DISTRO: debian9
     - MOLECULE_DISTRO: ubuntu1604
+    - MOLECULE_DISTRO: ubuntu1804
 script:
   - MOLECULE_DISTRO=${MOLECULE_DISTRO} pipenv run molecule test -s oraclejdk
   - MOLECULE_DISTRO=${MOLECULE_DISTRO} pipenv run molecule test -s openjdk
