--- a/vars/Ubuntu-bionic.yml
+++ b/vars/Ubuntu-bionic.yml
@@ -3,3 +3,5 @@
 java_required_repositories_openjdk:
   - "ppa:openjdk-r/ppa"
 java_required_libs_openjdk: []
+java_open_jdk_version: 11
+java_open_jdk_set_version: 11
