--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -25,7 +25,7 @@
 
 - name: Java | Install Java
   apt:
-    name: "openjdk-{{ java_open_jdk_version[:1] }}-jdk={{ java_open_jdk_version }}"
+    name: "openjdk-{{ java_open_jdk_version_major }}-jdk={{ java_open_jdk_version }}"
     state: present
     update_cache: true
 
@@ -33,6 +33,13 @@
   alternatives:
     name: java
     path: "{{ java_open_jdk_home }}/jre/bin/java"
+  when: java_open_jdk_version_major | version_compare('11', '<')
+
+- name: Java | Update Env, OpenJDK 11
+  alternatives:
+    name: java
+    path: "{{ java_open_jdk_home }}/bin/java"
+  when: java_open_jdk_version_major | version_compare('11', '>=')
 
 - name: Java | Ensure Defaults on etc/alternatives systems
   file:
