--- a/vars/Debian-jessie.yml
+++ b/vars/Debian-jessie.yml
@@ -9,4 +9,5 @@ java_required_libs_openjdk:
   - openjdk-8-jre-headless
   - libcups2
 
+java_open_jdk_version_major: 8
 java_open_jdk_version: 8u171-b11-1~bpo8+1
