--- a/vars/Ubuntu-bionic.yml
+++ b/vars/Ubuntu-bionic.yml
@@ -4,5 +4,5 @@ java_required_repositories_openjdk:
   - "ppa:openjdk-r/ppa"
 java_required_libs_openjdk: []
 
-java_open_jdk_version_major: 8
-java_open_jdk_version: 8u191-b12-0ubuntu0.16.04.1
+java_open_jdk_version_major: 11
+java_open_jdk_version: 11.0.1+13-3ubuntu1~18.04~ppa1
