--- a/molecule/openjdk/tests/test_default.yml
+++ b/molecule/openjdk/tests/test_default.yml
@@ -9,7 +9,7 @@ file:
     filetype: symlink
 
 package:
-  openjdk-{{ java_open_jdk_version_major }}-jdk:
+  {{ java_open_jdk_package }}:
       installed: true
       versions:
         - {{ java_open_jdk_version }}
