--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ env:
     - MOLECULE_DISTRO: ubuntu1604
     - MOLECULE_DISTRO: ubuntu1804
 script:
-  - MOLECULE_DISTRO=${MOLECULE_DISTRO} pipenv run molecule test -s oraclejdk
-  - MOLECULE_DISTRO=${MOLECULE_DISTRO} pipenv run molecule test -s openjdk
+  - travis_wait 30 MOLECULE_DISTRO=${MOLECULE_DISTRO} pipenv run molecule test -s oraclejdk
+  - travis_wait 30 MOLECULE_DISTRO=${MOLECULE_DISTRO} pipenv run molecule test -s openjdk
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
