--- a/molecule/openjdk/playbook.yml
+++ b/molecule/openjdk/playbook.yml
@@ -2,5 +2,7 @@
 
 - name: Converge
   hosts: openjdk
+  vars_files:
+    - "./vars/{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml"
   roles:
     - java-role
