fixing Molecule Goss tests

--- a/molecule/openjdk/verifier.yml
+++ b/molecule/openjdk/verifier.yml
@@ -22,8 +22,9 @@
   vars_files:
     - ../../defaults/main.yml
     - ../../vars/main.yml
-    - ./group_vars/openjdk.yml
     - ../../vars/{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml
+    - ./group_vars/openjdk.yml
+    - ./vars/{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml
 
   tasks:
     - name: Download and install goss
