--- a/vars/Ubuntu-xenial.yml
+++ b/vars/Ubuntu-xenial.yml
@@ -2,4 +2,5 @@
 
 java_required_repositories_openjdk:
   - "ppa:openjdk-r/ppa"
-java_required_libs_openjdk: []
+java_required_libs_openjdk:
+  - ca-certificates-java
