--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ env:
     - MOLECULE_DISTRO: ubuntu1804
 script:
   - export MOLECULE_DISTRO=${MOLECULE_DISTRO}
-  - 'travis_wait 30 pipenv run molecule test -s openjdk'
-  - 'travis_wait 30 pipenv run molecule test -s oraclejdk'
+  - pipenv run molecule test -s openjdk
+  - pipenv run molecule test -s oraclejdk
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
