#56 Add java version to docker image tag name

--- a/dockerhub/provision_docker_image.yml
+++ b/dockerhub/provision_docker_image.yml
@@ -7,7 +7,7 @@
       docker_container:
         name: "{{ item }}"
         state: started
-        image: "idealista/jdk:{{ image_tag }}"
+        image: "{{ image_tag }}"
       with_items:
         - docker-test-openjdk
         - docker-test-oraclejdk
