--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ java_oracle_jdk_install_path: /opt/jdk/{{ java_oracle_jdk_version }}
 
 # OpenJDK implementation
 java_open_jdk_version_major: 8
+java_open_jdk_version: "8u181-b13-2~deb9u1"
 java_open_jdk_package: openjdk-{{ java_open_jdk_version_major }}-jdk
 java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-amd64
 java_open_jdk_home: /usr/lib/jvm/{{ java_open_jdk_home_dir }}
