--- a/vars/Debian-jessie.yml
+++ b/vars/Debian-jessie.yml
@@ -1,9 +1,12 @@
 ---
 
-# Adding backports as is described here: https://backports.debian.org/Instructions/
-java_required_repositories_openjdk:
+# Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
+__java_open_jdk_version_major: 8
+__java_open_jdk_version: "8u171-b11-1~bpo8+1"
+
+__java_required_repositories_openjdk:
   - deb http://ftp.debian.org/debian jessie-backports main
 
-java_required_libs_openjdk:
+__java_required_libs_openjdk:
   - ca-certificates-java=20161107~bpo8+1
   - libcups2
