--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -4,7 +4,15 @@
   include_vars: "{{ item }}"
   with_first_found:
     - "{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml"
-  tags: vars
+
+# Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
+# Allowing to 'override' variables that are defined using include_vars
+- name: Java | Setting OS specific variables
+  set_fact:
+    java_open_jdk_version_major: "{{ java_open_jdk_version_major if java_open_jdk_version_major is defined else __java_open_jdk_version_major }}"
+    java_open_jdk_version: "{{ java_open_jdk_version if java_open_jdk_version is defined else __java_open_jdk_version }}"
+    java_required_repositories_openjdk: "{{ java_required_repositories_openjdk if java_required_repositories_openjdk is defined else __java_required_repositories_openjdk }}"
+    java_required_libs_openjdk: "{{ java_required_libs_openjdk if java_required_libs_openjdk is defined else __java_required_libs_openjdk }}"
 
 - name: Java | Set JAVA_HOME fact
   set_fact:
