--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -26,16 +26,21 @@
 
 - name: Java | Install required libs
   apt:
-    name: "{{ item }}"
+    name: "{{ java_required_libs_openjdk }}"
     state: present
+    cache_valid_time: 3600
     update_cache: true
-  with_items: "{{ java_required_libs_openjdk }}"
+  until: java_required_libs_installed is succeeded
+  register: java_required_libs_installed
 
 - name: Java | Install Java
   apt:
     name: "{{ java_open_jdk_package }}={{ java_open_jdk_version }}"
     state: present
+    cache_valid_time: 3600
     update_cache: true
+  until: java_package_installed is succeeded
+  register: java_package_installed
 
 - name: Java | Update Env
   alternatives:
