--- a/vars/Ubuntu-bionic.yml
+++ b/vars/Ubuntu-bionic.yml
@@ -1,11 +1,9 @@
 ---
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
-__java_open_jdk_version_major: 11
 __java_open_jdk_version: "11.0.1+13-3ubuntu1~18.04~ppa1"
 
+# Needed because Ubuntu Bionic SRU Exception with OpenJDK
 __java_required_repositories_openjdk:
   - "ppa:openjdk-r/ppa"
-
-__java_required_libs_openjdk:
-  - ca-certificates-java
+__java_required_libs_openjdk: []
