--- a/vars/Ubuntu-xenial.yml
+++ b/vars/Ubuntu-xenial.yml
@@ -1,11 +1,7 @@
 ---
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
-__java_open_jdk_version_major: 11
-__java_open_jdk_version: "11.0.1+13-3ubuntu1~16.04~ppa1"
+__java_open_jdk_version: "9~b114-0ubuntu1"
 
-__java_required_repositories_openjdk:
-  - "ppa:openjdk-r/ppa"
-
-__java_required_libs_openjdk:
-  - ca-certificates-java
+__java_required_repositories_openjdk: []
+__java_required_libs_openjdk: []
