--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ services:
 
 before_script:
   - wget https://releases.hashicorp.com/packer/1.3.4/packer_1.3.4_linux_amd64.zip -O /tmp/packer.zip
-  - unzip -o /tmp/packer.zip
+  - rm -rf /tmp/packer
+  - unzip /tmp/packer.zip
   - export PATH=$PATH:$PWD/packer
   - packer --help
 
