--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ services:
   - docker
 
 before_script:
-  - wget https://releases.hashicorp.com/packer/1.3.4/packer_1.3.4_linux_amd64.zip -O /tmp/packer.zip
-  - rm -rf /tmp/packer
-  - unzip /tmp/packer.zip
-  - export PATH=$PATH:$PWD/packer
+  - wget -q https://releases.hashicorp.com/packer/1.3.4/packer_1.3.4_linux_amd64.zip -O /tmp/packer.zip
+  - unzip /tmp/packer.zip -d /usr/bin
   - packer --help
 
 install:
