--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 before_script:
   - wget -q https://releases.hashicorp.com/packer/1.3.4/packer_1.3.4_linux_amd64.zip -O /tmp/packer.zip
-  - sudo unzip /tmp/packer.zip -d /usr/local/bin -o
+  - sudo unzip -o /tmp/packer.zip -d /usr/local/bin
   - packer --version
 
 install:
