--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   role_name: java-role
   author: idealista
   company: Idealista S.A.U.
-  description: Java role, install java versions and set systems default
+  description: Java role, install java versions and set system defaults
   min_ansible_version: 2.4.5.0
   license: Apache 2.0
   platforms:
