renaming var MOLECULE_DISTRO to LINUX_DISTRO in molecule.yml

--- a/molecule/oraclejdk/molecule.yml
+++ b/molecule/oraclejdk/molecule.yml
@@ -9,10 +9,10 @@ lint:
     config-file: .yamllint
 
 platforms:
-  - name: oraclejdk-${MOLECULE_DISTRO:-debian9}
+  - name: oraclejdk-${LINUX_DISTRO:-debian9}
     groups:
       - oraclejdk
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-debian9}-ansible:latest
+    image: geerlingguy/docker-${LINUX_DISTRO:-debian9}-ansible:latest
     privileged: true
     capabilities:
       - SYS_ADMIN
